# CS205Proj-2

./: CMakeLists.txt  main.cpp  readme.md
inc/: Expression.hpp  Function.hpp  IFSNumber.hpp  Number.hpp  Variable.hpp
report/: 119119Proj#2Report.md
src/: IFSNumber.cpp
